--- a/bookclass/WebContent/NewFile.html
+++ b/bookclass/WebContent/NewFile.html
@@ -5,9 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Hello gyuseok !</h1>
-<img src = "./img/jaechang.jpeg" height = '300'>
-<a href = "./table.html"> Table </a>
-
+<h1>Hello my page!</h1>
 </body>
 </html>
